modif jeu photomontages présentation

--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -22,7 +22,7 @@
             <li><a href="../presentation.html" target="_parent">PRÉSENTATION</a></li>
         </nav>
     </div>
-
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
     <script src="../../js/navbar.js"></script>
 
 </body>
