--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -23,29 +23,40 @@
     <!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
 
-    <div class="presentation_dut_mmi_case">
-        <p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
+    <br><br><br><br><br>
+    <div class="row_simple">
+        <p class="explication_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
     </div>
 
     <div class="jeu_ligne_case">
         <a class="dut_projet" href="../../html/DUT MMI/scratch.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
-            <p class="cadre_sombre_texte"><span class="contour"> | </span>Room 203<span class="contour"> | </span></p>
+            <div class="cadre_sombre">
+                <p class="cadre_sombre_texte">Room 203</p>
+            </div>
         </a>
         <a class="dut_projet" href="../../html/DUT MMI/crystal.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
-            <p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
+            <div class="cadre_sombre">
+                <p class="cadre_sombre_texte">Cristal's Quest</p>
+            </div>
         </a>
-    </div>
-    <div class="jeu_ligne_case">
         <a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
-            <p class="cadre_sombre_texte"><span class="contour"> | </span>Nanimo<span class="contour"> | </span></p>
+            <div class="cadre_sombre">
+                <p class="cadre_sombre_texte">Nanimo</p>
+            </div>
         </a>
         <a class="dut_projet" href="../../html/DUT MMI/twr.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
-            <p class="cadre_sombre_texte"><span class="contour"> | </span>Those Who Remain<span class="contour"> | </span></p>
+            <div class="cadre_sombre">
+                <p class="cadre_sombre_texte">Those Who Remain</p>
+            </div>
+
         </a>
+    </div>
+    <div class="jeu_ligne_case">
+
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
