--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -1,78 +1,95 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Photomontage</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-        <link rel="stylesheet" href="../../css/style.css">
-        <link rel="stylesheet" href="../../css/photomontage.css">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | Photomontage</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/photomontage.css">
+    <link rel="stylesheet" href="../../css/flickity.css">
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+</head>
 
-<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
-</div>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 
-<div class="photomontage_total"> 
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P9.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Février 2021<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Décembre 2020<span class="contour"> | </span></p>
-    </a>
-    <div class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg" alt="Photomontage d'une jungle avec ruines aztèques. Vert, cascade, triangle, lumière, aventurier."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Septembre 2020<span class="contour"> | </span></p>
-        <a class="lien_projet" href="../DUT MMI/infographie.html"><span class="contour"> | </span>Voir le projet<span class="contour"> | </span></a>
+    <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
+    <a href="#" class="bouton_remonter">▲</a>
+
+    <div class="presentation_dut_mmi_case">
+        <p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
     </div>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg" alt="Photomontage d'une immense cave souterraine avec une tour. Bleu, aventurier, pont suspendu."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Janvier 2020<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P5.jpg" alt="Photomontage de Stranger Things devant laboratoire Hawkins avec un dinner américain. Rouge, tempête."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Décembre 2019<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P4.jpg" alt="Photomontage de météroïtes qui s'écrasent sur Gallifrey. Dixième, Doctor Who, Tardis, Montagne."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Septembre 2019<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P3.jpg" alt="Photomontage d'un alien combattant des soldats dans une forêt sombre. Vert, barbelé."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Avril 2019<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P2.jpg" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/>
-        <p class="date_photomontage"><span class="contour"> | </span>Octobre 2018<span class="contour"> | </span></p>
-    </a>
-    <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P1.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/>			
-        <p class="date_photomontage"><span class="contour"> | </span>Février 2017<span class="contour"> | </span></p>
-    </a>
-</div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+    <div class="photomontage_total">
+        <div class="row_simple">
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P9.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte." />
+                <p class="date_photomontage"><span class="contour"> | </span>Février 2021<span class="contour"> | </span></p>
+            </a>
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes." />
+                <p class="date_photomontage"><span class="contour"> | </span>Décembre 2020<span class="contour"> | </span></p>
+            </a>
+        </div>
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg" alt="Photomontage d'une jungle avec ruines aztèques. Vert, cascade, triangle, lumière, aventurier." />
+                <p class="date_photomontage"><span class="contour"> | </span>Septembre 2020<span class="contour"> | </span></p>
+                <a class="lien_projet" href="../DUT MMI/infographie.html">Voir le projet</a>
+            </div>
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg" alt="Photomontage d'une immense cave souterraine avec une tour. Bleu, aventurier, pont suspendu." />
+                <p class="date_photomontage"><span class="contour"> | </span>Janvier 2020<span class="contour"> | </span></p>
+            </a>
+        </div>
+        <div class="row_simple">
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P5.jpg" alt="Photomontage de Stranger Things devant laboratoire Hawkins avec un dinner américain. Rouge, tempête." />
+                <p class="date_photomontage"><span class="contour"> | </span>Décembre 2019<span class="contour"> | </span></p>
+            </a>
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P4.jpg" alt="Photomontage de météroïtes qui s'écrasent sur Gallifrey. Dixième, Doctor Who, Tardis, Montagne." />
+                <p class="date_photomontage"><span class="contour"> | </span>Septembre 2019<span class="contour"> | </span></p>
+            </a>
+        </div>
+        <div class="row_simple">
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P3.jpg" alt="Photomontage d'un alien combattant des soldats dans une forêt sombre. Vert, barbelé." />
+                <p class="date_photomontage"><span class="contour"> | </span>Avril 2019<span class="contour"> | </span></p>
+            </a>
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P2.jpg" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet." />
+                <p class="date_photomontage"><span class="contour"> | </span>Octobre 2018<span class="contour"> | </span></p>
+            </a>
+        </div>
+        <div class="row_simple">
+            <a class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P1.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie." />
+                <p class="date_photomontage"><span class="contour"> | </span>Février 2017<span class="contour"> | </span></p>
+            </a>
+            <a class="lien_photomontage transparent">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P1.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie." />
+                <p class="date_photomontage"><span class="contour"> | </span>Février 2017<span class="contour"> | </span></p>
+            </a>
+        </div>
+    </div>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-	</body>
+    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="../../js/flickity.pkgd.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
+
+</body>
+
 </html>
