--- a/html/presentation.html
+++ b/html/presentation.html
@@ -22,9 +22,11 @@
     <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
     <div class="espace"></div>
+    <h1 class="present_big_present">Présentation</h1>
+    <br>
     <div class="row_simple_present">
-        <div class="column_simple" id="tiers">
-            <h1 class="present_big_present">Présentation</h1>
+        <div class="column_simple" id="half">
+            <h2 class="present_middle_present">Plus sur moi...</h2>
             <p class="explication_text_present">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour obtenir un DUT Métiers du Multimédia et de l'Internet (MMI).
                 <br><br> J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à travers eux d'ailleurs que j'ai
                 rencontré Photoshop que je n'ai pas lâché depuis la sixième. De manière générale je m'intéresse à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie, illustration sur photoshop, vidéo, écriture,
@@ -33,12 +35,30 @@
             <div class="space"></div>
             <a href="" class="btn_download" download="RESSOURCES/Alvina DR - CV.pdf">Télécharger mon CV</a>
             <br>
+            <h2 class="present_middle_present">Contact :</h2>
             <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
             </p>
         </div>
-        <div class="column_simple" id="deuxtiers">
+        <div class="column_simple" id="half">
+            <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
+            <div class="row_simple">
+                <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%">
 
+            </div>
+            <div class="row_simple">
+                <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%">
+            </div>>
+            <h2 class="present_middle_present">Soft skills :</h2>
         </div>
+
+    </div>
     </div>
 
 
