--- a/html/DUT MMI/nanimo.html
+++ b/html/DUT MMI/nanimo.html
@@ -2,79 +2,57 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="../../icon.ico" />
-	<meta name="description"
-		content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-	<meta name=”viewport” content=”width=device-width, initial-scale=1>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-	<title>Alvina Damasio--Razafiarizaka | Nanimo</title>
+    <title>Alvina Damasio--Razafiarizaka | Nanimo</title>
 
-	<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-	<link rel="stylesheet" href="../../css/flickity.css">
+    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/jeu.css">
 
 </head>
 
 <body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-	<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
-	<a href="#" class="bouton_remonter">▲</a>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+    <a href="#" class="bouton_remonter">▲</a>
 
-	<div class="row_simple" id="start">
-		<div class="column_simple" id="half">
-			<p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était
-				"Lost And Found". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI
-				comme moi
-				et un élève en licence pro Game Design / Level Design (IUT Bobigny), nous avons décidé de réaliser un
-				jeu de puzzle.</p>
-			<p class="explication_text">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre
-				dans leurs enclos.
-				Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec
-				soin pour éviter
-				que la ferme ne devienne un véritable chaos.
-			</p>
-			<p class="explication_text">Sur ce projet j'ai participé à la partie design (animation des animaux, design
-				de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits,
-				etc...). J'ai aussi participé
-				à la création de prefabs d'animaux sur Unity.
-			</p>
-			
-		</div>
-		<div class="column_simple video" id="half">
-			<p class="explication_text">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
-			</p>
-			<iframe class="gallerie_image" width="560" height="315" src="https://www.youtube.com/embed/cYzAFRk12po"
-				frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-		</div>
-	</div>
-	<!--fin de row-simple start-->
-	<div class="space"></div>
-	<!--ESPACE-->
-	<div class="row_simple">
-		<!--LIEN VERS LE JEU-->
-		<div class="column_simple" id="half">
-			<!--p class="link_text">Pour essayer le jeu cliquez <a class="lien"
-					href="https://shynamo.itch.io/nanimo">ici</a>.</p-->
-					<iframe frameborder="0" src="https://itch.io/embed-upload/3312351?color=333333" allowfullscreen="" width="900" height="550"><a href="https://shynamo.itch.io/nanimo">Play Nanimo on itch.io</a></iframe>
-					<div class="space"></div>
-					<iframe frameborder="0" src="https://itch.io/embed/903107?linkback=true" width="900" height="167"><a href="https://shynamo.itch.io/nanimo">Nanimo by Shynamo, Alvina DR, wolffien, AnatoleCodeur, 0ur0boss</a></iframe>
-		</div>
-	</div>
-	<div class="space"></div>
-	<!--ESPACE-->
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <div class="row_simple" id="start">
+        <div class="column_simple" id="half">
+            <p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était "Lost And Found". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi et un élève en licence pro Game Design / Level
+                Design (IUT Bobigny), nous avons décidé de réaliser un jeu de puzzle.</p>
+            <p class="explication_text">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre dans leurs enclos. Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec soin pour éviter que la ferme ne devienne
+                un véritable chaos.
+            </p>
+            <p class="explication_text">Sur ce projet j'ai participé à la partie design (animation des animaux, design de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits, etc...). J'ai aussi participé à la création de prefabs
+                d'animaux sur Unity.
+            </p>
+            <br><br>
+            <p class="explication_text">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
+            </p>
+            <iframe class="video_trailer" width="680 " height="350 " src="https://www.youtube.com/embed/cYzAFRk12po " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+        </div>
+        <div class="column_simple " id="half ">
+            <iframe frameborder="0 " src="https://itch.io/embed-upload/3312351?color=333333 " allowfullscreen=" " width="700 " height="550 "><a href="https://shynamo.itch.io/nanimo ">Play Nanimo on itch.io</a></iframe>
+            <div class="space "></div>
+            <iframe frameborder="0 " src="https://itch.io/embed/903107?linkback=true&amp;dark=true " width="700 " height="167 "><a href="https://shynamo.itch.io/nanimo ">Nanimo by Shynamo, Alvina DR, wolffien, AnatoleCodeur, 0ur0boss</a></iframe>
+        </div>
+    </div>
+    <br><br>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-	<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-	<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	<script src="../../js/flickity.pkgd.js"></script>
-	<script src="../../js/navbar.js"></script>
-	<!--------------------------------------------------------------------------------------------------------------->
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
+
+    <iframe class="include " src="../0commons/footer.html " seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js "></script>
+    <script src="../../js/flickity.pkgd.js "></script>
+    <script src="../../js/navbar.js "></script>
+    <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
 </html>
