modif colonne présentation

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -39,17 +39,19 @@
             <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
             </p>
         </div>
+        <div class="column_simple column_space">
+
+        </div>
         <div class="column_simple" id="half">
             <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
-            <div class="row_simple">
+            <div class="row_simple left">
                 <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%">
-
             </div>
-            <div class="row_simple">
+            <div class="row_simple left">
                 <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
