bouton section jeu

--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -9,9 +9,8 @@
 
     <title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/jeu.css">
-    <link rel="stylesheet" href="../../css/flickity.css">
     <link rel="stylesheet" href="../../css/dut mmi.css">
 
 </head>
@@ -31,27 +30,15 @@
     <div class="jeu_ligne_case">
         <a class="dut_projet" href="../../html/DUT MMI/scratch.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
-            <div class="cadre_sombre">
-                <p class="cadre_sombre_texte">Room 203</p>
-            </div>
         </a>
         <a class="dut_projet" href="../../html/DUT MMI/crystal.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
-            <div class="cadre_sombre">
-                <p class="cadre_sombre_texte">Cristal's Quest</p>
-            </div>
         </a>
         <a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
-            <div class="cadre_sombre">
-                <p class="cadre_sombre_texte">Nanimo</p>
-            </div>
         </a>
         <a class="dut_projet" href="../../html/DUT MMI/twr.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
-            <div class="cadre_sombre">
-                <p class="cadre_sombre_texte">Those Who Remain</p>
-            </div>
 
         </a>
     </div>
