refonte galerie photo

--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -1,68 +1,50 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Photographie</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/dut mmi.css">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | Photographie</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/dut mmi.css">
+    <link rel="stylesheet" href="../../css/photomontage.css">
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+</head>
 
-<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<div class="gallerie">
-<div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg" alt="Photo d'un playmobil."/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg" alt="Photo d'une étagère."/></a>
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg" alt="Photo d'une rainette verte."/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg" alt="Photo de deux frères."/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg" alt="Photo d'une fleur jaune."/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg" alt="Photo d'une empreinte de pas dans le sable."/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg" alt="Photo d'une statue de marin."/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png" alt="Photo d'un macaron rose."/></a>
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg" alt="Photo d'un manchot."/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg" alt="Grosse photo d'une rainette verte."/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg" alt="Photo d'une corde pendue."/></a>
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg" alt="Photo d'une petite fille qui sourit."/></a>
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg" alt="Photo d'un poisson clown."/></a> 
-</div>
-<div class="dut_ligne_case">
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg" alt="Photo d'un petit garçon qui mange une glace."/></a> 
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg" alt="Photo d'une femme qui prend une photo dans le miroir."/></a>
-</div>
-</div>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+    <a href="#" class="bouton_remonter">▲</a>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <br><br><br><br><br>
+    <div class="photomontage_total">
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/HOME/I16.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte." />
+                <p class="date_photomontage"><span class="contour"> | </span>HOME<span class="contour"> | </span></p>
+                <a class="lien_projet" href="../DUT MMI/photo_home.html">Voir le projet</a>
+            </div>
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/MMI BX/b1.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes." />
+                <p class="date_photomontage"><span class="contour"> | </span>MMI BX<span class="contour"> | </span></p>
+                <a class="lien_projet" href="../DUT MMI/photo_mmibx.html">Voir le projet</a>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="../../js/navbar.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
 
-	</body>
+</body>
+
 </html>
