--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -18,8 +18,7 @@
             <div id="marker"></div>
             <!--SOULIGNEMENT-->
             <li><a href="../../index.html" target="_parent">ACCUEIL</a></li>
-            <!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-            <li><a href="../presentation.html" target="_parent">PRÉSENTATION</a></li>
+            <li><a href="../presentation.html" target="_parent">À PROPOS DE...</a></li>
         </nav>
     </div>
     <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
