--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -1,48 +1,75 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | 3D</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-        <link rel="stylesheet" href="../../css/style.css" id="theme-link">
-        <link rel="stylesheet" href="../../css/photomontage.css">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | 3D</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/photomontage.css">
+    <link rel="stylesheet" href="../../css/flickity.css">
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+</head>
+
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
+
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
+    <a href="#" class="bouton_remonter">▲</a>
 
 
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis faits par mes soins.</p>
-</div>
+    <div class="presentation_dut_mmi_case">
+        <p class="presentation_text">La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis faits par mes soins.</p>
+    </div>
 
-<div class="photomontage_total"> 
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 1.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Araignée.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Voiture.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 2.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Old.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Tardis.jpg"/>
-    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg"/>
-</div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <div class="photomontage_total">
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 1.jpg" />
+            </div>
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Araignée.jpg" />
+            </div>
+        </div>
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Voiture.jpg" />
+            </div>
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 2.jpg" />
+            </div>
+        </div>
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Old.jpg" />
+            </div>
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Tardis.jpg" />
+            </div>
+        </div>
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg" />
+            </div>
+            <div class="lien_photomontage transparent">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg" />
+            </div>
+        </div>
+        <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+        <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+        <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+        <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script src="../../js/flickity.pkgd.js"></script>
+        <script src="../../js/navbar.js"></script>
+        <!--------------------------------------------------------------------------------------------------------------->
 
-	</body>
+</body>
+
 </html>
